<resources>
    <string name="app_name">TicketPlease</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="email">Email</string>
    <string name="nazwa_u_ytkownika">Nazwa użytkownika</string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="has_o">Hasło</string>
    <string name="zarejestruj_si">Zarejestruj się</string>
    <string name="poka">Pokaż</string>
    <string name="zapomnia_e_has_a">Zapomniałeś hasła?</string>
    <string name="nie_masz_jeszcze_konta_zarejesruj_si">Nie masz jeszcze konta? Zarejestruj się</string>
    <string name="masz_ju_konto_zaloguj_si">Masz już konto? Zaloguj się</string>
    <string name="witaj">Witaj</string>
    <string name="aby_rozpocz_korzystanie_z_aplikacji_zaloguj_si_lub_utw_rz_nowe_konto">Aby rozpocząć korzystanie z aplikacji zaloguj się lub utwórz nowe konto</string>
    <string name="strona_g_wna">Strona główna</string>
    <string name="opis">Opis</string>
    <string name="title">Title</string>
    <string name="gatunek">Gatunek</string>
    <string name="profile_button">profile button</string>
    <string name="ticket_button">ticket button</string>
    <string name="search_button">search button</string>
    <string name="home_button">home button</string>
    <string name="szukaj">Szukaj</string>
    <string name="buy_ticket">buy ticket</string>
    <string name="description">Description</string>
    <string name="film_poster">film poster</string>
    <string name="bilet">Bilet</string>
    <string name="_12_06_2020">12.06.2020</string>
    <string name="_4_bilety">4 bilety</string>
    <string name="qrcode">qrcode</string>

    <string name="najlepiej_oceniane">Najlepiej oceniane</string>
    <string name="promocje">Promocje</string>
    <string name="_10_00_z">10.00 zł</string>
    <string name="najnowsze_filmy">Najnowsze filmy</string>
    <string name="podsumowanie">Podsumowanie</string>
    <string name="kupi_e_5_bilet_w">Kupiłeś 5 biletów</string>
    <string name="data_seansu_06_12_2020">Data seansu: 06.12.2020</string>
    <string name="otrzymasz_powiadomienie_dzie_przed_seansem">Otrzymasz powiadomienie dzień przed seansem</string>
    <string name="wyszukiwarka">Wyszukiwarka</string>
    <string name="result_1">Result 1</string>
    <string name="ok">OK</string>
    <string name="rezerwacja">Rezerwacja</string>
    <string name="cinema">Cinema</string>
    <string name="technology">Technology</string>
    <string name="date">Date</string>
    <string name="dalej">Dalej</string>
    <string name="reset_has_a">Reset hasła</string>
    <string name="na_podany_adres_email_zostanie_wys_any_link_pozwalaj_cy_na_zmian_has_a">Na podany adres email zostanie wysłany link pozwalający na zmianę hasła</string>
    <string name="wy_lij">Wyślij</string>
    <string name="todo"></string>
    <string name="profil">Profil</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="obejrzane">Obejrzane</string>
    <string name="zarezerowane">Zarezerowane</string>
    <string name="tytu">Tytuł</string>
    <string name="nick">Nick</string>
    <string name="offers">Offers</string>
    <string name="search">Search</string>
    <string name="EmptyPassword">Podaj hasło</string>
    <string name="EmptyEmail">Podaj adres E-mail</string>
    <string name="EmptyLogin">Podaj nazwę użytkownika</string>
    <string name="RegistrationFailToast">Nie udało się stworzyć konta, spróbuj ponownie</string>
    <string name="VerificationEmailSent">E-mail weryfikacyjny został wysłany</string>
    <string name="onFailureEmail">onFailure: Email not sent </string>
    <string name="loginError">Nazwa użytkownika lub hasło jest niepoprawne</string>
    <string name="lorem_ipsum_dolor_sit_amet_tellus_quisque_pretium_eget_enim_fusce_convallis_pellentesque_justo_euismod_pede_nunc_justo_ipsum_ante_in_leo_sapien_lacinia_sit_amet_magna_sed_tristique_velit_vitae_lacinia_lacus_phasellus_lorem_a_leo_felis_facilisis_congue_nunc_sapien_in_lobortis_mauris_et_malesuada_congue_nam_pharetra_eget_lacinia_scelerisque_dui_vel_ipsum_vitae_urna_nam_lorem_eros_bibendum_scelerisque_odio_non_dolor_pellentesque_molestie_enim_mauris_luctus_a_adipiscing_elit_sed_faucibus_dolor_sit_amet_tellus_maecenas_nec_urna_sem_vestibulum_iaculis_in_tempus_suspendisse_ultricies_vitae_nunc_nulla_aliquet_porttitor_vel_dui_ut_sit_amet_vulputate_eu_sagittis_sed_ultrices_nec_mattis_sed_aliquet_feugiat_tortor_mauris_interdum_at_pretium_bibendum_a_massa_vivamus_faucibus_lorem_nunc_velit_sit_amet_quam_nunc_molestie_a_elementum_eu_aliquet_eget_scelerisque_porttitor_interdum_nulla_ipsum_primis_in_felis_tincidunt_hendrerit_sollicitudin_id_eleifend_pede_bibendum_purus_scelerisque_neque_mauris_adipiscing_vitae_egestas_ac_vulputate_fringilla_phasellus_tellus_pede_ultrices_sit_amet_euismod_id_orci_in_hac_habitasse_platea_dictumst_maecenas_semper_eros_quisque_placerat_a_mauris_mauris_molestie_placerat_nisl_quam_lobortis_elit_nam_vestibulum_cras_non_purus_praesent_vitae_ornare_a_hendrerit_sagittis_lorem_ipsum_primis_in_massa_mauris_ut_magna_vitae_imperdiet_sed_viverra_mattis_integer_aliquet_elit_aenean_massa_dui_ut_viverra_luctus_nisl_in_nunc_fusce_nisl_dui_nunc_in_faucibus_orci_dui_non_nunc_hendrerit_wisi_phasellus_vitae_ultrices_urna_placerat_eget_sagittis_eleifend_nulla_facilisi_phasellus_at_lectus_eget_augue_eu_nunc_phasellus_in_faucibus_vestibulum_nullam_semper_risus_nullam_justo_phasellus_libero_nec_nunc_posuere_vehicula_dolor_massa_sit_amet_tortor_phasellus_vulputate_eget_nisl_curabitur_eget_dolor_id_eros_ut_eget_leo_ut_leo_donec_nisl_ac_quam_ante_ipsum_adipiscing_arcu_congue_eu_fringilla_aliquet_praesent_pretium_vivamus_posuere_ligula_ut_malesuada_fames_ac_erat_volutpat_curabitur_commodo_cras_vitae_ultrices_posuere_in_gravida_vitae_bibendum_tellus_quis_ultricies_in_convallis_non_dictum_justo_iaculis_malesuada_fames_ac_erat_fermentum_libero_lacinia_eros_sem_sit_amet_quam_sagittis_tortor_vehicula_non_tempor_magna_non_sem_quisque_at_orci">Lorem ipsum dolor sit amet tellus. Quisque pretium eget, enim. Fusce convallis pellentesque, justo euismod pede nunc justo ipsum ante, in leo sapien, lacinia sit amet magna. Sed tristique velit, vitae lacinia lacus. Phasellus lorem a leo felis facilisis congue. Nunc sapien. In lobortis mauris et malesuada congue. Nam pharetra eget, lacinia scelerisque, dui vel ipsum vitae urna. Nam lorem eros bibendum scelerisque odio non dolor. Pellentesque molestie enim. Mauris luctus a, adipiscing elit. Sed faucibus, dolor sit amet, tellus. Maecenas nec urna sem vestibulum iaculis. In tempus. Suspendisse ultricies vitae, nunc. Nulla aliquet porttitor vel, dui. Ut sit amet, vulputate eu, sagittis sed, ultrices nec, mattis sed, aliquet feugiat tortor mauris, interdum at, pretium bibendum a, massa. Vivamus faucibus lorem. Nunc velit sit amet quam. Nunc molestie a, elementum eu, aliquet eget, scelerisque porttitor interdum. Nulla ipsum primis in felis tincidunt hendrerit sollicitudin id, eleifend pede bibendum purus scelerisque neque mauris, adipiscing vitae, egestas ac, vulputate fringilla. Phasellus tellus pede ultrices sit amet, euismod id, orci. In hac habitasse platea dictumst. Maecenas semper eros. Quisque placerat a, mauris. Mauris molestie placerat, nisl quam, lobortis elit. Nam vestibulum. Cras non purus. Praesent vitae ornare a, hendrerit sagittis. Lorem ipsum primis in massa. Mauris ut magna vitae imperdiet sed, viverra mattis. Integer aliquet elit. Aenean massa dui ut viverra luctus, nisl in nunc. Fusce nisl dui nunc, in faucibus orci dui, non nunc hendrerit wisi. Phasellus vitae ultrices urna, placerat eget, sagittis eleifend. Nulla facilisi. Phasellus at lectus eget augue eu nunc. Phasellus in faucibus vestibulum. Nullam semper risus. Nullam justo. Phasellus libero nec nunc posuere vehicula dolor massa sit amet, tortor. Phasellus vulputate eget, nisl. Curabitur eget dolor id eros. Ut eget leo ut leo. Donec nisl ac quam ante ipsum adipiscing arcu congue eu, fringilla aliquet. Praesent pretium. Vivamus posuere ligula ut malesuada fames ac erat volutpat. Curabitur commodo. Cras vitae ultrices posuere in, gravida vitae, bibendum tellus, quis ultricies in, convallis non, dictum justo iaculis malesuada fames ac erat fermentum libero lacinia eros sem sit amet quam sagittis tortor vehicula non, tempor magna non sem. Quisque at orci.</string>
    <string name="small_popcorn_free_with_every_ticket">Small popcorn free with every ticket</string>
    <string name="name">Name</string>
    <string name="oferta">Oferta Specjalna</string>

    <string-array name="genres">
        <item>Kryminalny</item>
        <item>Dramat</item>
        <item>Komedia</item>
        <item>Akcja</item>
        <item>Sci-Fi</item>
        <item>Sensacyjny</item>
        <item>Thriller</item>
    </string-array>

</resources>