<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.chip.Chip
        android:id="@+id/ResetPasswordConfirmButton"
        android:layout_width="210dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        app:chipBackgroundColor="#5DB075"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/CloseButtonForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/resetPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exit" />

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/reset_has_a"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/recoverPasswordEmail"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="273dp"
        android:layout_height="37dp"
        android:layout_marginTop="28dp"
        android:text="@string/na_podany_adres_email_zostanie_wys_any_link_pozwalaj_cy_na_zmian_has_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoverPasswordEmail" />

    <TextView
        android:id="@+id/ResetPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wy_lij"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ResetPasswordConfirmButton"
        app:layout_constraintEnd_toEndOf="@+id/ResetPasswordConfirmButton"
        app:layout_constraintStart_toStartOf="@+id/ResetPasswordConfirmButton"
        app:layout_constraintTop_toTopOf="@+id/ResetPasswordConfirmButton" />

</androidx.constraintlayout.widget.ConstraintLayout>