<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip5"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/szukaj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUP" />


    <RadioGroup
        android:id="@+id/toggleProfile"
        android:layout_width="342dp"
        android:layout_height="35dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/color_out_line"
        android:checkedButton="@+id/offer"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip5">

        <RadioButton
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/offer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/offers"
            android:textColor="#BDBDBD" />
    </RadioGroup>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDown"
        android:layout_width="411dp"
        android:layout_height="90dp"
        android:layout_marginStart="1dp"
        android:background="#FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUP"
        android:layout_width="411dp"
        android:layout_height="74dp"
        android:background="@color/mainColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="38.33dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarDown"
        app:layout_constraintStart_toStartOf="@+id/toolbarDown"
        app:layout_constraintTop_toTopOf="@+id/toolbarDown"
        app:srcCompat="@drawable/home"
        android:contentDescription="@string/home_button" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="38.33dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarDown"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="@+id/toolbarDown"
        app:srcCompat="@drawable/search"
        android:contentDescription="@string/search_button" />

    <ImageButton
        android:id="@+id/ticketButton"
        android:layout_width="38.33dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarDown"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:layout_constraintTop_toTopOf="@+id/toolbarDown"
        app:srcCompat="@drawable/ticket"
        android:contentDescription="@string/ticket_button" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="38.33dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="78dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarDown"
        app:layout_constraintEnd_toEndOf="@+id/toolbarDown"
        app:layout_constraintStart_toEndOf="@+id/ticketButton"
        app:layout_constraintTop_toTopOf="@+id/toolbarDown"
        app:layout_constraintVertical_bias="0.466"
        app:srcCompat="@drawable/profile"
        android:contentDescription="@string/profile_button" />

    <TextView
        android:id="@+id/NickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wyszukiwarka"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarUP"
        app:layout_constraintEnd_toEndOf="@+id/toolbarUP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbarUP" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollView3"
        android:layout_width="407dp"
        android:layout_height="543dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleProfile">

        <TextView
            android:id="@+id/DescriptionText"
            android:layout_width="317dp"
            android:layout_height="42dp"
            android:layout_marginTop="4dp"
            android:text="@string/result_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:textColor="#000000"
            tools:textSize="16sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>